# ForecastAI26.01

./: CLAUDE.md  The objective is to determine the best possible forecast method.docx  start.bat  start_api.bat  start_api.vbs
.claude/: launch.json  settings.local.json
.claude/.claude/: settings.local.json
data/bicycle/: bicycle_model.xlsx
files/: .env.example  MODULES_CDE_COMPLETE.md  TimeSeriesViewer.jsx  _copy_meio_tables.py  causal_runner.py  config.yaml  fitting.py  foundation_models.py  generate_pdf.py  main.py  meio_runner.py  metrics.py  migrate_parquet_to_db.py  neural_models.py  orchestrator.py  requirements.txt  run_pipeline.py  take_screenshots.py
files/.claude/: launch.json
files/DDL/: master_schema.sql  schema.sql
files/MEIO/: Cargo.toml  pyproject.toml
files/MEIO/intial/: Distributions.py  IOLibrary.py  MEIO documentation.docx  MEIO.py  z_conversion.py
files/MEIO/src/: causal.rs  config.rs  distributions.rs  lib.rs  marginal.rs  math.rs  optimizer.rs  sku.rs  target.rs
files/api/: admin.py  auth.py  auth_middleware.py  main.py
files/causal/: bom.py  demand_generator.py  fleet.py  maintenance.py  mdfh_fitter.py  scenario_runner.py
files/characterization/: characterization.py
files/classification/: abc.py
files/config/: config.yaml
files/data/: time_series.parquet  time_series_corrected.parquet
files/db/: db.py  master_db.py
files/distribution/: __init__.py  fitting.py
files/docs/: forecasting_methodology.md  generate_pdf.py
files/etl/: etl.py
files/evaluation/: __init__.py  metrics.py
files/forecasting/: __init__.py  (+4 more)
(+58 files in other folders)
